--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,14 @@ spring.application.name=balances-management
 
 spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
+
+# MySQL DB Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/balance?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=mysqlroot
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
